--- a/source/school_in_clear.html.erb
+++ b/source/school_in_clear.html.erb
@@ -1,35 +1,35 @@
 <section class="grid-container">
   <ul class="breadcrumbs">
-    <li><%= link_to 'Home', '/index.html' %></li>
-    <li><%= link_to 'Scuole in chiaro', '/scuole_in_chiaro.html' %></li>
+    <li><%= link_to 'Home', '/' %></li>
+    <li><%= link_to 'Scuole in chiaro', transparency_path %></li>
   </ul>
 
-  <h1 class="title">Scuole in chiaro</h1>
+  <h1 class="title">Scuola in chiaro</h1>
 
   <div class="card-container">
-    <% documents.each do |document| %>
+    <% dato.transparency.documents.each do |document| %>
       <section class="section-card">
-        <%= image_tag document[:icon_path], class:'document-icon' %>
-        <h1 class="section-card__title font-title"><%= document[:title] %></h1>
+        <%= image_tag 'document-icon.png', class:'document-icon' %>
+        <h1 class="section-card__title font-title"><%= document.name %></h1>
         <p class="section-card__date date-info">
           <span class="date-info__label">
             Creato il:
           </span>
           <span class="date-info__value">
-            <%= document[:date] %>
+            <%= format_date(document.created_at) %>
           </span>
         </p>
         <div class="section-card__body">
-          <p class="text"><%= document[:description] %></p>
+          <p class="text"><%= document.description %></p>
           <p class="section-card__date date-info">
             <span class="date-info__label">
               Aggiornato il:
             </span>
             <span class="date-info__value">
-              <%= document[:update] %>
+              <%= format_date(document.updated_at) %>
             </span>
           </p>
-          <%= link_to 'Scarica', document[:url], class: 'button button--card-action' %>
+          <%= link_to 'Scarica', document.attachment.url, class: 'button button--card-action' %>
         </div>
       </section>
     <% end %>
