--- a/source/scuole/projects.html.erb
+++ b/source/scuole/projects.html.erb
@@ -1,19 +1,19 @@
 <ul class="breadcrumbs">
-  <li><%= link_to 'Home', '/index.html' %></li>
-  <li><%= link_to 'Le scuole', '/le_scuole.html' %></li>
-  <li><%= link_to school[:label], "/scuole/#{school[:slug]}.html" %></li>
-  <li><%= link_to 'Progetti in corso', "/scuole/#{school[:slug]}/progetti_in_corso.html" %></li>
+  <li><%= link_to 'Home', '/' %></li>
+  <li><%= link_to 'Le scuole', schools_path %></li>
+  <li><%= link_to school.name, school_path(school) %></li>
+  <li><%= link_to 'Progetti in corso', school_projects_path(school) %></li>
 </ul>
 
 <div class="card-container">
-  <% projects.each do |project| %>
+  <% school.projects.each do |project| %>
     <section class="section-card">
-      <%= image_tag project[:cover], class:'section-card__cover' %>
-      <h1 class="section-card__title font-title"><%= project[:title] %></h1>
-      <p class="section-card__date"><%= project[:date] %></p>
+      <%= image_tag project.cover.url, class:'section-card__cover' %>
+      <h1 class="section-card__title font-title"><%= project.title %></h1>
+      <p class="section-card__date"><%= format_date(project.date) %></p>
       <div class="section-card__body">
-        <p class="text"><%= project[:text] %></p>
-        <%= link_to 'Scopri il progetto', "/scuole/#{school[:slug]}/progetti_in_corso/#{project[:slug]}.html", class: 'button button--card-action' %>
+        <p class="text"><%= project.description %></p>
+        <%= link_to 'Scopri il progetto', school_project_path(school, project), class: 'button button--card-action' %>
       </div>
     </section>
   <% end %>
