--- a/source/school_in_clear.html.erb
+++ b/source/school_in_clear.html.erb
@@ -20,7 +20,7 @@
           </span>
         </p>
         <div class="section-card__body">
-          <p class="text"><%= document.description %></p>
+          <div class="rich-text"><%= document.description %></div>
           <p class="section-card__date date-info">
             <span class="date-info__label">
               Aggiornato il:
