--- a/source/scuole/event.html.erb
+++ b/source/scuole/event.html.erb
@@ -16,6 +16,6 @@
       </div>
     </div>
     <h1 class="section-card__title font-title"><%= event.name %></h1>
-    <p class="text"><%= event.description %></p>
+    <div class="rich-text"><%= event.description %></div>
   </div>
 </section>
