--- a/source/scuole/projects.html.erb
+++ b/source/scuole/projects.html.erb
@@ -12,7 +12,7 @@
       <h1 class="section-card__title font-title"><%= project.title %></h1>
       <p class="section-card__date"><%= format_date(project.date) %></p>
       <div class="section-card__body">
-        <p class="text"><%= project.description %></p>
+        <div class="rich-text"><%= project.description %></div>
         <%= link_to 'Scopri il progetto', school_project_path(school, project), class: 'button button--card-action' %>
       </div>
     </section>
