--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -7,13 +7,13 @@
     Chi siamo?
   </h1>
 
-  <p class="text"><%= dato.homepage.who_are_we %></p>
+  <div class="rich-text"><%= dato.homepage.who_are_we %></div>
 
   <h1 class="title">
     Obiettivi
   </h1>
 
-  <p class="text"><%= dato.homepage.goals %></p>
+  <div class="rich-text"><%= dato.homepage.goals %></div>
 
   <div id="map"></div>
   <script>
