--- a/source/stylesheets/_typography.css.scss
+++ b/source/stylesheets/_typography.css.scss
@@ -9,10 +9,13 @@
   margin: 0;
 }
 
-.text {
+.rich-text {
   font-family: 'Noto Sans', sans-serif;
   font-size: 16px;
   margin: 0;
+  img {
+    max-width: 100%;
+  }
 }
 
 .font-title {
