Updates the map

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -21,14 +21,14 @@
     var map = new mapboxgl.Map({
       container: 'map',
       style: 'mapbox://styles/olistik/cjwz2na0u0fbj1cn5k04p4rzy',
-      center: [9.207719, 45.617772], // starting position [lng, lat]
-      zoom: 12.453748326689462,
+      center: [9.217394156387513, 45.61926405617254], // starting position [lng, lat]
+      zoom: 13.477287633784492,
     });
     // disable map zoom when using scroll
     map.scrollZoom.disable();
     var boundingBox = [
-      [9.24872585278814, 45.62608006006212],
-      [9.168509906896816, 45.599777925198964]
+      [9.236383738941981, 45.62573206898807],
+      [9.196924866053479, 45.61279529723129]
     ]
     map.fitBounds(boundingBox)
   </script>
