--- a/source/scuole/school.html.erb
+++ b/source/scuole/school.html.erb
@@ -43,11 +43,13 @@
       </tbody>
     </table>
   <% end %>
-  <div class="team">
-    <h1 class="title">Il team</h1>
-    <%= image_tag school.team.photo.url, class: 'cover-image' %>
-    <div class="rich-text"><%= school.team.description %></div>
-  </div>
+  <% if school.team %>
+    <div class="team">
+      <h1 class="title">Il team</h1>
+      <%= image_tag school.team.photo.url, class: 'cover-image' %>
+      <div class="rich-text"><%= school.team.description %></div>
+    </div>
+  <% end %>
   <div class="card-container">
     <div class="section-card">
       <h1 class="section-card__title font-title">Progetti in corso</h1>
