Renames the title of the card.
Eventi -> Calendario

--- a/source/scuole/school.html.erb
+++ b/source/scuole/school.html.erb
@@ -59,7 +59,7 @@
       </div>
     </div>
     <div class="section-card">
-      <h1 class="section-card__title font-title">Eventi</h1>
+      <h1 class="section-card__title font-title">Calendario</h1>
       <div class="section-card__body">
         <div class="rich-text"><%= school.events_description %></div>
         <%= link_to 'Scopri', school_events_path(school), class: 'button button--card-action' %>
