Justifies the text.

--- a/source/stylesheets/_typography.css.scss
+++ b/source/stylesheets/_typography.css.scss
@@ -13,6 +13,7 @@
   font-family: 'Noto Sans', sans-serif;
   font-size: 16px;
   margin: 0;
+  text-align: justify;
   img {
     max-width: 100%;
   }
