Adds navigation control to the map.

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -31,5 +31,7 @@
       [9.196924866053479, 45.61279529723129]
     ]
     map.fitBounds(boundingBox)
+    var nav = new mapboxgl.NavigationControl();
+    map.addControl(nav, 'bottom-right');
   </script>
 </section>
