💄 Prefers the dot notation to access attributes

--- a/source/exploratory/calendar.html.erb
+++ b/source/exploratory/calendar.html.erb
@@ -20,7 +20,7 @@
               words_limit = 30
               words = event.description.split(' ')
               if words.length <= words_limit
-                event[:description]
+                event.description
               else
                 words[0..words_limit].join(' ') + ' [..]'
               end
